--- a/3-column-preview-card-component/style.css
+++ b/3-column-preview-card-component/style.css
@@ -18,12 +18,8 @@
     padding: 0;
 }
 
-html {
-    height: 100%;
-}
-
 body {
-    height: 100%;
+    min-height: 100vh;
     background-color: var(--clr-main);
     display: flex;
     justify-content: center;
@@ -96,10 +92,6 @@ button:hover {
 }
 
 @media (max-width: 940px) {
-
-    html {
-        height: auto;
-    }
 
     .container {
         width: 300px;
