--- a/social-proof-section/style.css
+++ b/social-proof-section/style.css
@@ -29,6 +29,7 @@ body {
 
 header h1 {
     font-size: 2.8rem;
+    font-weight: 700;
     color: var(--clr-primary-magenta);
     margin: 20px auto;
     text-align: center;
@@ -36,9 +37,36 @@ header h1 {
 
 header p {
     font-size: 1.2rem;
+    font-weight: 500;
     color: var(--clr-dark-gray);
     margin: 20px auto;
     text-align: center;
+}
+
+.ratings-card {
+    background-color: var(--clr-light-gray);
+    border-radius: 10px;
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+}
+
+.stars {
+    margin: 15px 0;
+}
+
+.star-img {
+    margin: 0 3px;
+}
+
+.ratings-card p {
+    margin-bottom: 15px;
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: var(--clr-primary-magenta);
 }
 
 /* Temp borders */
