--- a/social-proof-section/style.css
+++ b/social-proof-section/style.css
@@ -19,12 +19,16 @@
 }
 
 body {
-    min-height: 100vh;
     min-width: 350px;
     display: flex;
     flex-direction: column;
-    padding: 90px 25px;
+    padding: 60px 25px;
     background-color: var(--clr-white);
+}
+
+header,
+section {
+    margin: 15px 0;
 }
 
 header h1 {
@@ -46,7 +50,7 @@ header p {
 .ratings-card {
     background-color: var(--clr-light-gray);
     border-radius: 10px;
-    max-width: 325px;
+    max-width: 360px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -72,13 +76,14 @@ header p {
 .testamonial-card {
     background-color: var(--clr-primary-magenta);
     border-radius: 10px;
-    max-width: 325px;
+    max-width: 360px;
+    max-height: 260px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     margin: 10px auto;
-    padding: 40px 28px;
+    padding: 35px 25px;
 }
 
 .customer-profile {
@@ -112,11 +117,76 @@ header p {
     line-height: 1.4rem;
 }
 
+@media (min-width:980px) {
 
+    body {
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: 2fr 3fr;
+        padding: 60px 90px;
+    }
 
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 
-/* Temp borders */
-header,
-section {
-    border: 1px solid red;
+    header h1,
+    header p {
+        text-align: start;
+    }
+
+    .ratings {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+    }
+
+    .ratings-card {
+        flex-direction: row;
+        min-width: 420px;
+        align-items: center;
+        justify-content: start;
+        padding: 0 20px;
+
+    }
+
+    .ratings-card p {
+        margin: 0 0 0 20px;
+    }
+
+    .ratings-card:first-child {
+        position: relative;
+        left: -45px;
+    }
+
+    .ratings-card:last-child {
+        position: relative;
+        left: 45px;
+    }
+
+    .testamonials {
+        grid-column: 1 / 3;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+
+    .testamonial-card {
+        margin: 15px;
+        max-width: 420px;
+    }
+
+    .testamonial-card:first-child {
+        position: relative;
+        top: -20px;
+    }
+
+    .testamonial-card:last-child {
+        position: relative;
+        top: 20px;
+    }
 }
