--- a/FAQ-accordion-card/scss/style.scss
+++ b/FAQ-accordion-card/scss/style.scss
@@ -1,5 +1,10 @@
 @import 'config';
 
+:root {
+    font-family: $ff-kumbh-sans;
+    font-size: 12px;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -8,5 +13,57 @@
 
 body {
     background-image: $bg-grad;
-    height: 100vh;
+    min-height: 100vh;
+}
+
+.container {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.image-container {
+    width: 80%;
+    margin-bottom: -135px;
+    z-index: 1;
+
+    .box {
+        display: none;
+    }
+}
+
+.text-container {
+    // width: 100%;
+    padding: 200px 25px 40px 25px;
+    background: #fff;
+    border-radius: 20px;
+
+    h1 {
+        text-align: center;
+        font-size: 3.4rem;
+        margin-bottom: 35px ;
+        color: $clr-primary-text;
+    }
+    
+    section {
+        // margin: 15px auto;
+        border-bottom: 1px solid $clr-divider;
+        
+        .question {
+            font-size: 1.2rem;
+            font-weight: 400;
+            margin: 15px auto;
+            color: $clr-question-text;
+        }
+
+        .answer {
+            margin-bottom: 15px;
+            color: $clr-answer-text;
+            // height: 0;
+            // overflow: hidden;
+        }
+
+    }
 }
