--- a/FAQ-accordion-card/scss/style.scss
+++ b/FAQ-accordion-card/scss/style.scss
@@ -26,7 +26,7 @@ body {
 
 .image-container {
     width: 80%;
-    margin-bottom: -135px;
+    transform: translateY(41%);
     z-index: 1;
 
     .box {
@@ -35,20 +35,20 @@ body {
 }
 
 .text-container {
-    // width: 100%;
-    padding: 200px 25px 40px 25px;
+    // padding: 100px 25px 40px 25px;
+    padding: 40px 25px;
     background: #fff;
     border-radius: 20px;
 
     h1 {
         text-align: center;
         font-size: 3.4rem;
+        margin-top: 100px;
         margin-bottom: 35px ;
         color: $clr-primary-text;
     }
     
     section {
-        // margin: 15px auto;
         border-bottom: 1px solid $clr-divider;
         
         .question {
