--- a/FAQ-accordion-card/scss/style.scss
+++ b/FAQ-accordion-card/scss/style.scss
@@ -17,17 +17,20 @@ body {
 }
 
 .container {
-    width: 80%;
-    margin: auto;
+    width: 90%;
+    min-width: 200px;
+    margin: 150px auto 20px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 25px 25px 25px;
+    background: #fff;
+    border-radius: 20px;
 }
 
 .image-container {
     width: 80%;
-    transform: translateY(41%);
-    z-index: 1;
+    transform: translateY(-57%);
 
     .box {
         display: none;
@@ -35,15 +38,11 @@ body {
 }
 
 .text-container {
-    // padding: 100px 25px 40px 25px;
-    padding: 40px 25px;
-    background: #fff;
-    border-radius: 20px;
 
     h1 {
         text-align: center;
         font-size: 3.4rem;
-        margin-top: 100px;
+        margin-top: -40px;
         margin-bottom: 35px ;
         color: $clr-primary-text;
     }
