--- a/FAQ-accordion-card/css/style.css
+++ b/FAQ-accordion-card/css/style.css
@@ -22,7 +22,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 25px 25px 25px;
+  padding: 0 25px 55px 25px;
   background: #fff;
   border-radius: 20px;
 }
@@ -45,11 +45,20 @@ body {
 .text-container section {
   border-bottom: 1px solid hsl(240deg, 5%, 91%);
 }
+.text-container section .question-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
 .text-container section .question {
   font-size: 1.2rem;
   font-weight: 400;
-  margin: 15px auto;
+  margin: 15px 0;
   color: hsl(237deg, 12%, 33%);
+}
+.text-container section .arrow {
+  height: 0.8rem;
 }
 .text-container section .answer {
   margin-bottom: 15px;
