--- a/FAQ-accordion-card/scss/style.scss
+++ b/FAQ-accordion-card/scss/style.scss
@@ -23,7 +23,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 25px 25px 25px;
+    padding: 0 25px 55px 25px;
     background: #fff;
     border-radius: 20px;
 }
@@ -49,12 +49,24 @@ body {
     
     section {
         border-bottom: 1px solid $clr-divider;
+
+        .question-line {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            cursor: pointer;
+        }
         
         .question {
             font-size: 1.2rem;
             font-weight: 400;
-            margin: 15px auto;
+            margin: 15px 0;
             color: $clr-question-text;
+
+        }
+
+        .arrow {
+            height: 0.8rem;
         }
 
         .answer {
