--- a/FAQ-accordion-card/scss/style.scss
+++ b/FAQ-accordion-card/scss/style.scss
@@ -61,6 +61,10 @@ body {
                 font-weight: 400;
                 margin: 15px 0;
                 color: $clr-question-text;
+
+                &:hover {
+                    color: $clr-highlight-text;
+                }
             }
     
             .arrow {
@@ -73,7 +77,12 @@ body {
                 .question {
                     color: $clr-primary-text;
                     font-weight: 700;
+                    
+                    &:hover {
+                        color: $clr-highlight-text;
+                    }
                 }
+
 
                 .arrow {
                     transform: rotate(180deg);
@@ -81,7 +90,7 @@ body {
 
                 & + .answer {
                     margin-bottom: 15px;
-                    max-height: 50px;
+                    max-height: 80px;
                 }
 
             }
