--- a/FAQ-accordion-card/css/style.css
+++ b/FAQ-accordion-card/css/style.css
@@ -88,3 +88,18 @@ body {
   overflow: hidden;
   transition: all 0.3s;
 }
+
+@media (min-width: 600px) {
+  .container {
+    flex-direction: row;
+    padding: 40px;
+    background-image: url("../assets/bg-pattern-desktop.svg");
+    background-position: center left;
+  }
+  .image-container {
+    transform: translateY(0);
+  }
+  .text-container h1 {
+    margin-top: 0;
+  }
+}
