--- a/FAQ-accordion-card/css/style.css
+++ b/FAQ-accordion-card/css/style.css
@@ -15,9 +15,14 @@ body {
   min-height: 100vh;
 }
 
+.box {
+  display: none;
+}
+
 .container {
   width: 90%;
   min-width: 200px;
+  max-width: 1400px;
   margin: 150px auto 20px auto;
   display: flex;
   flex-direction: column;
@@ -34,11 +39,12 @@ body {
 .image-container {
   width: 80%;
   transform: translateY(-57%);
-}
-.image-container .box {
-  display: none;
+  flex: 1;
 }
 
+.text-container {
+  flex: 2;
+}
 .text-container h1 {
   text-align: center;
   font-size: 3.4rem;
@@ -80,7 +86,7 @@ body {
 }
 .text-container section .accordion-head.active + .answer {
   margin-bottom: 15px;
-  max-height: 80px;
+  max-height: 100px;
 }
 .text-container section .answer {
   color: hsl(240deg, 6%, 50%);
@@ -89,15 +95,26 @@ body {
   transition: all 0.3s;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 740px) {
+  .box {
+    display: inline;
+    z-index: 1;
+    position: absolute;
+    top: 52%;
+    left: 1%;
+  }
   .container {
     flex-direction: row;
-    padding: 40px;
+    padding: 40px 0;
+    overflow: hidden;
     background-image: url("../assets/bg-pattern-desktop.svg");
     background-position: center left;
   }
   .image-container {
-    transform: translateY(0);
+    transform: translate(-17%, 0);
+  }
+  .text-container {
+    margin: 20px 60px;
   }
   .text-container h1 {
     margin-top: 0;
