--- a/FAQ-accordion-card/css/style.css
+++ b/FAQ-accordion-card/css/style.css
@@ -108,7 +108,8 @@ body {
     padding: 40px 0;
     overflow: hidden;
     background-image: url("../assets/bg-pattern-desktop.svg");
-    background-position: center left;
+    background-position: -25% 50%;
+    background-size: 50%;
   }
   .image-container {
     transform: translate(-17%, 0);
@@ -118,5 +119,6 @@ body {
   }
   .text-container h1 {
     margin-top: 0;
+    text-align: left;
   }
 }
