--- a/FAQ-accordion-card/scss/style.scss
+++ b/FAQ-accordion-card/scss/style.scss
@@ -131,7 +131,8 @@ body {
         padding: 40px 0;
         overflow: hidden;
         background-image: url('../assets/bg-pattern-desktop.svg');
-        background-position: center left;
+        background-position: -25% 50%;
+        background-size: 50%;
     }
 
     .image-container {
@@ -142,8 +143,10 @@ body {
     .text-container {
 
         margin: 20px 60px;
+
         h1 {
             margin-top: 0;
+            text-align: left;
         }
     }
 }
