--- a/FAQ-accordion-card/css/style.css
+++ b/FAQ-accordion-card/css/style.css
@@ -13,6 +13,18 @@
 body {
   background-image: linear-gradient(90deg, hsl(240deg, 73%, 65%), hsl(273deg, 75%, 66%));
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 250px 0 60px 0;
+}
+
+.relative-wrap {
+  width: 90%;
+  position: relative;
+  margin: auto;
+  min-width: 200px;
+  max-width: 1400px;
 }
 
 .box {
@@ -20,10 +32,8 @@ body {
 }
 
 .container {
-  width: 90%;
   min-width: 200px;
   max-width: 1400px;
-  margin: 150px auto 20px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -95,27 +105,29 @@ body {
   transition: all 0.3s;
 }
 
-@media (min-width: 740px) {
+@media (min-width: 840px) {
+  body {
+    padding: 0;
+  }
   .box {
     display: inline;
     z-index: 1;
     position: absolute;
-    top: 52%;
-    left: 1%;
+    top: 40%;
+    left: -90px;
   }
   .container {
     flex-direction: row;
-    padding: 40px 0;
     overflow: hidden;
     background-image: url("../assets/bg-pattern-desktop.svg");
     background-position: -25% 50%;
     background-size: 50%;
   }
   .image-container {
-    transform: translate(-17%, 0);
+    transform: translateX(-17%);
   }
   .text-container {
-    margin: 20px 60px;
+    margin: 60px 60px 60px 0;
   }
   .text-container h1 {
     margin-top: 0;
