--- a/FAQ-accordion-card/scss/style.scss
+++ b/FAQ-accordion-card/scss/style.scss
@@ -14,6 +14,18 @@
 body {
     background-image: $bg-grad;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 250px 0 60px 0;
+}
+
+.relative-wrap {
+    width: 90%;
+    position: relative;
+    margin: auto;
+    min-width: 200px;
+    max-width: 1400px;
 }
 
 .box {
@@ -21,10 +33,10 @@ body {
 }
 
 .container {
-    width: 90%;
+    // width: 90%;
     min-width: 200px;
     max-width: 1400px;
-    margin: 150px auto 20px auto;
+    // margin: 150px auto 20px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -116,19 +128,26 @@ body {
 }
 
 
-@media (min-width: 740px) {
+@media (min-width: 840px) {
     
+    body {
+        padding: 0;
+    }
+
     .box {
         display: inline;
         z-index: 1;
+        // position: absolute;
+        // top: 52%;
+        // left: 1%;
         position: absolute;
-        top: 52%;
-        left: 1%;
+        top: 40%;
+        left: -90px;
     }
 
     .container {
         flex-direction: row;
-        padding: 40px 0;
+        // padding: 40px 0;
         overflow: hidden;
         background-image: url('../assets/bg-pattern-desktop.svg');
         background-position: -25% 50%;
@@ -136,13 +155,13 @@ body {
     }
 
     .image-container {
-        transform: translate(-17%, 0);
+        transform: translateX(-17%);
 
     }
 
     .text-container {
 
-        margin: 20px 60px;
+        margin: 60px 60px 60px 0;
 
         h1 {
             margin-top: 0;
