--- a/interactive-rating-component/css/main.css
+++ b/interactive-rating-component/css/main.css
@@ -6,5 +6,102 @@
 }
 
 :root {
-  font-size: 15px;
+  font-size: 13px;
+}
+
+html {
+  font-family: "Overpass", sans-serif;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(216deg, 12%, 8%);
+}
+
+.card {
+  width: 350px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 25px;
+  background-color: hsl(213deg, 19%, 18%);
+  border-radius: 15px;
+  padding: 25px;
+}
+
+.header {
+  display: flex;
+}
+.header.left-align {
+  align-self: flex-start;
+}
+.header .star-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #303a46;
+}
+.header .star-container .star-icon {
+  height: 14px;
+}
+
+.text h1 {
+  color: hsl(0deg, 0%, 100%);
+  font-size: 1.8rem;
+  margin-bottom: 10px;
+}
+.text p {
+  color: hsl(217deg, 12%, 63%);
+}
+
+.rating-area {
+  width: 100%;
+}
+.rating-area .rating-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+.rating-area .rating-list .rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #303a46;
+  color: hsl(217deg, 12%, 63%);
+  padding-top: 2px;
+}
+.rating-area .rating-list .rating:hover {
+  background-color: hsl(25deg, 97%, 53%);
+  color: hsl(0deg, 0%, 100%);
+}
+.rating-area .rating-list .rating.active {
+  background-color: hsl(217deg, 12%, 63%);
+  color: hsl(0deg, 0%, 100%);
+}
+.rating-area button {
+  width: 100%;
+  height: 40px;
+  border: none;
+  background-color: hsl(25deg, 97%, 53%);
+  color: hsl(0deg, 0%, 100%);
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: 700;
+  border-radius: 40px;
+}
+.rating-area button:hover {
+  background-color: hsl(0deg, 0%, 100%);
+  color: hsl(25deg, 97%, 53%);
 }
