--- a/interactive-rating-component/scss/main.scss
+++ b/interactive-rating-component/scss/main.scss
@@ -2,5 +2,122 @@
 @import 'reset';
 
 :root {
-    font-size: 15px;
+    font-size: 13px;
+}
+
+html {
+    font-family: $ff-main;
+}
+
+// * {
+    // border: solid 2px red;
+// }
+
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $clr-background;
+}
+
+.card {
+    width: 350px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 25px;
+    background-color: $clr-main;
+    border-radius: 15px;
+    padding: 25px;
+}
+
+.header {
+    display: flex;
+
+    &.left-align {
+        align-self: flex-start;
+    }
+
+    .star-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: lighten($clr-main, 5%);
+
+        .star-icon {
+            height: 14px;
+        }
+    }
+}
+
+.text {
+
+    h1 {
+        color: $clr-white;
+        font-size: 1.8rem;
+        margin-bottom: 10px;
+    }
+
+    p {
+        color: $clr-light-text;
+    }
+
+}
+
+.rating-area {
+    width: 100%;
+
+    .rating-list {
+        list-style: none;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 25px;
+
+        .rating {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: lighten($clr-main, 5%);
+            color: $clr-light-text;
+            padding-top: 2px;
+
+            &:hover {
+                background-color: $clr-primary;
+                color: $clr-white;
+            }
+
+            &.active {
+                background-color: $clr-light-text;
+                color: $clr-white;
+
+            }
+        }
+    }
+
+    button {
+        width: 100%;
+        height: 40px;
+        border: none;
+        background-color: $clr-primary;
+        color: $clr-white;
+        text-transform: uppercase;
+        letter-spacing: 0.2rem;
+        font-weight: 700;
+        border-radius: 40px;
+
+        &:hover {
+            background-color: $clr-white;
+            color: $clr-primary;
+        }
+    }
+
 }
