Add card change on submit

--- a/interactive-rating-component/scss/main.scss
+++ b/interactive-rating-component/scss/main.scss
@@ -68,6 +68,16 @@ body {
         color: $clr-light-text;
     }
 
+    &.center-align {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        p {
+            text-align: center;
+        }
+    }
+
 }
 
 .rating-area {
