--- a/interactive-rating-component/css/main.css
+++ b/interactive-rating-component/css/main.css
@@ -61,6 +61,14 @@ body {
 .text p {
   color: hsl(217deg, 12%, 63%);
 }
+.text.center-align {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.text.center-align p {
+  text-align: center;
+}
 
 .rating-area {
   width: 100%;
