--- a/interactive-rating-component/scss/main.scss
+++ b/interactive-rating-component/scss/main.scss
@@ -36,6 +36,9 @@ body {
 
 .header {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 45px;
 
     &.left-align {
         align-self: flex-start;
@@ -53,6 +56,13 @@ body {
         .star-icon {
             height: 14px;
         }
+    }
+
+    .rating-text {
+        color: $clr-primary;
+        background-color: lighten($clr-main, 5%);
+        padding: 7px 15px 5px 15px;
+        border-radius: 15px;
     }
 }
 
@@ -99,6 +109,7 @@ body {
             background-color: lighten($clr-main, 5%);
             color: $clr-light-text;
             padding-top: 2px;
+            cursor: pointer;
 
             &:hover {
                 background-color: $clr-primary;
@@ -123,6 +134,7 @@ body {
         letter-spacing: 0.2rem;
         font-weight: 700;
         border-radius: 40px;
+        cursor: pointer;
 
         &:hover {
             background-color: $clr-white;
