--- a/interactive-rating-component/scss/main.scss
+++ b/interactive-rating-component/scss/main.scss
@@ -1,12 +1,12 @@
-@import 'config';
-@import 'reset';
+@use './config' as c;
+@use './reset';
 
 :root {
-    font-size: 13px;
+    font-size: 12px;
 }
 
 html {
-    font-family: $ff-main;
+    font-family: c.$ff-main;
 }
 
 // * {
@@ -18,7 +18,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $clr-background;
+    background-color: c.$clr-background;
 }
 
 .card {
@@ -29,7 +29,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     gap: 25px;
-    background-color: $clr-main;
+    background-color: c.$clr-main;
     border-radius: 15px;
     padding: 25px;
 }
@@ -51,7 +51,7 @@ body {
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        background-color: lighten($clr-main, 5%);
+        background-color: lighten(c.$clr-main, 5%);
 
         .star-icon {
             height: 14px;
@@ -59,8 +59,8 @@ body {
     }
 
     .rating-text {
-        color: $clr-primary;
-        background-color: lighten($clr-main, 5%);
+        color: c.$clr-primary;
+        background-color: lighten(c.$clr-main, 5%);
         padding: 7px 15px 5px 15px;
         border-radius: 15px;
     }
@@ -69,13 +69,13 @@ body {
 .text {
 
     h1 {
-        color: $clr-white;
+        color: c.$clr-white;
         font-size: 1.8rem;
         margin-bottom: 10px;
     }
 
     p {
-        color: $clr-light-text;
+        color: c.$clr-light-text;
     }
 
     &.center-align {
@@ -106,19 +106,19 @@ body {
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            background-color: lighten($clr-main, 5%);
-            color: $clr-light-text;
+            background-color: lighten(c.$clr-main, 5%);
+            color: c.$clr-light-text;
             padding-top: 2px;
             cursor: pointer;
 
             &:hover {
-                background-color: $clr-primary;
-                color: $clr-white;
+                background-color: c.$clr-primary;
+                color: c.$clr-white;
             }
 
             &.active {
-                background-color: $clr-light-text;
-                color: $clr-white;
+                background-color: c.$clr-light-text;
+                color: c.$clr-white;
 
             }
         }
@@ -128,8 +128,8 @@ body {
         width: 100%;
         height: 40px;
         border: none;
-        background-color: $clr-primary;
-        color: $clr-white;
+        background-color: c.$clr-primary;
+        color: c.$clr-white;
         text-transform: uppercase;
         letter-spacing: 0.2rem;
         font-weight: 700;
@@ -137,8 +137,8 @@ body {
         cursor: pointer;
 
         &:hover {
-            background-color: $clr-white;
-            color: $clr-primary;
+            background-color: c.$clr-white;
+            color: c.$clr-primary;
         }
     }
 
