--- a/intro-component-with-signup-form/scss/_config.scss
+++ b/intro-component-with-signup-form/scss/_config.scss
@@ -4,7 +4,8 @@ $clr-primary-red: hsl(0, 100%, 74%);
 $clr-primary-green: hsl(154, 59%, 51%);
 $clr-accent: hsl(248, 32%, 49%);
 $clr-dark: hsl(249, 10%, 26%);
-$clr-text: hsl(246, 25%, 77%);
+$clr-med: hsl(246, 25%, 77%);
+$clr-light: hsl(0, 0%, 100%);
 
 // Fonts
 
