--- a/intro-component-with-signup-form/scss/main.scss
+++ b/intro-component-with-signup-form/scss/main.scss
@@ -1,5 +1,8 @@
 @use "./reset.scss";
 @use "./config" as c;
+@use "./media" as m;
+
+
 
 body {
     min-height: 100vh;
@@ -7,11 +10,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 25px;
+    padding: 0 25px;
     background-image: url("../assets/bg-intro-mobile.png");
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-color: c.$clr-primary-red;
+    max-width: 1200px;
 }
 
 header,
@@ -21,6 +25,7 @@ form {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    max-width: 420px;
 }
 
 header {
@@ -29,6 +34,7 @@ header {
     .hero-title {
         color: c.$clr-light;
         margin-bottom: 20px;
+        line-height: 2.4rem;
     }
 
     .hero-para {
@@ -107,3 +113,5 @@ form {
         }
     }   
 }
+
+@include m.desktop-view;
