--- a/intro-component-with-signup-form/css/main.css
+++ b/intro-component-with-signup-form/css/main.css
@@ -110,9 +110,10 @@ form .submit-btn {
   color: hsl(0deg, 0%, 100%);
   letter-spacing: 1px;
   box-shadow: 0 5px 3px #2ba671;
+  outline: none;
   cursor: pointer;
 }
-form .submit-btn:hover {
+form .submit-btn:hover, form .submit-btn:focus {
   background-color: #61d6a3;
 }
 
