Add validation styling

--- a/intro-component-with-signup-form/css/main.css
+++ b/intro-component-with-signup-form/css/main.css
@@ -97,6 +97,15 @@ form input {
   border: 1px solid hsl(246deg, 25%, 77%);
   border-radius: 3px;
 }
+form input + span {
+  position: relative;
+  display: none;
+  font-size: 0.5rem;
+  color: #ff4747;
+  text-align: right;
+  font-weight: 600;
+  margin: -5px 2px 0 0;
+}
 form input:focus {
   outline: 1px solid hsl(249deg, 10%, 26%);
 }
@@ -115,6 +124,84 @@ form .submit-btn {
 }
 form .submit-btn:hover, form .submit-btn:focus {
   background-color: #61d6a3;
+}
+
+input:invalid:not(:focus):not(:-moz-placeholder-shown) {
+  border: 1px solid #ff4747;
+  color: #ff4747;
+}
+
+input:invalid:not(:focus):not(:-ms-input-placeholder) {
+  border: 1px solid #ff4747;
+  color: #ff4747;
+}
+
+input:invalid:not(:focus):not(:placeholder-shown) {
+  border: 1px solid #ff4747;
+  color: #ff4747;
+}
+input:invalid:not(:focus):not(:-moz-placeholder-shown) + span {
+  display: block;
+}
+input:invalid:not(:focus):not(:-ms-input-placeholder) + span {
+  display: block;
+}
+input:invalid:not(:focus):not(:placeholder-shown) + span {
+  display: block;
+}
+input:invalid:not(:focus):not(:-moz-placeholder-shown) + span::before {
+  position: absolute;
+  top: -37px;
+  right: 5px;
+  content: url(../assets/icon-error.svg);
+}
+input:invalid:not(:focus):not(:-ms-input-placeholder) + span::before {
+  position: absolute;
+  top: -37px;
+  right: 5px;
+  content: url(../assets/icon-error.svg);
+}
+input:invalid:not(:focus):not(:placeholder-shown) + span::before {
+  position: absolute;
+  top: -37px;
+  right: 5px;
+  content: url(../assets/icon-error.svg);
+}
+input:invalid:not(:focus):not(:-moz-placeholder-shown)[name=user-firstname] + span::after {
+  content: "First Name cannot be empty";
+}
+input:invalid:not(:focus):not(:-ms-input-placeholder)[name=user-firstname] + span::after {
+  content: "First Name cannot be empty";
+}
+input:invalid:not(:focus):not(:placeholder-shown)[name=user-firstname] + span::after {
+  content: "First Name cannot be empty";
+}
+input:invalid:not(:focus):not(:-moz-placeholder-shown)[name=user-lastname] + span::after {
+  content: "Last Name cannot be empty";
+}
+input:invalid:not(:focus):not(:-ms-input-placeholder)[name=user-lastname] + span::after {
+  content: "Last Name cannot be empty";
+}
+input:invalid:not(:focus):not(:placeholder-shown)[name=user-lastname] + span::after {
+  content: "Last Name cannot be empty";
+}
+input:invalid:not(:focus):not(:-moz-placeholder-shown)[name=user-email] + span::after {
+  content: "Must be a valid email. e.g.: example@mail.com";
+}
+input:invalid:not(:focus):not(:-ms-input-placeholder)[name=user-email] + span::after {
+  content: "Must be a valid email. e.g.: example@mail.com";
+}
+input:invalid:not(:focus):not(:placeholder-shown)[name=user-email] + span::after {
+  content: "Must be a valid email. e.g.: example@mail.com";
+}
+input:invalid:not(:focus):not(:-moz-placeholder-shown)[name=user-pass] + span::after {
+  content: "Password must be a at least 8 characters";
+}
+input:invalid:not(:focus):not(:-ms-input-placeholder)[name=user-pass] + span::after {
+  content: "Password must be a at least 8 characters";
+}
+input:invalid:not(:focus):not(:placeholder-shown)[name=user-pass] + span::after {
+  content: "Password must be a at least 8 characters";
 }
 
 @media (min-width: 600px) {
