--- a/intro-component-with-signup-form/scss/main.scss
+++ b/intro-component-with-signup-form/scss/main.scss
@@ -95,9 +95,35 @@ form {
         border: 1px solid c.$clr-med;
         border-radius: 3px;
 
+        &+span {
+            position: relative;
+            display: none;
+            font-size: 0.5rem;
+            color: darken(c.$clr-primary-red, 10%);
+            text-align: right;
+            font-weight: 600;
+            margin: -5px 2px 0 0;
+
+        }
+
         &:focus {
             outline: 1px solid c.$clr-dark;
         }
+
+        // &:invalid:not(:focus):not(:placeholder-shown) {
+        //     border: 1px solid darken(c.$clr-primary-red, 10%);
+        //     // box-shadow: 0 0 0 1px darken(c.$clr-primary-red, 10%);
+        //     color: darken(c.$clr-primary-red, 10%);
+
+        //     &+span {
+        //         display: block;
+
+        //         &::after{
+        //         content: "Error";
+        //         }
+        //     }
+
+        // }
     }
 
     .submit-btn {
@@ -119,5 +145,42 @@ form {
         }
     }   
 }
+
+// Validation styling
+
+input:invalid:not(:focus):not(:placeholder-shown) {
+    border: 1px solid darken(c.$clr-primary-red, 10%);
+    // box-shadow: 0 0 0 1px darken(c.$clr-primary-red, 10%);
+    color: darken(c.$clr-primary-red, 10%);
+
+    &+span {
+        display: block;
+
+        &::before {
+            position: absolute;
+            top: -37px;
+            right: 5px;
+            content: url(../assets/icon-error.svg);
+        }        
+    }
+
+    &[name="user-firstname"]+span::after{
+        content: "First Name cannot be empty";
+        }
+    
+    &[name="user-lastname"]+span::after{
+        content: "Last Name cannot be empty";
+        }
+
+    &[name="user-email"]+span::after{
+        content: "Must be a valid email. e.g.: example@mail.com";
+        }
+
+    &[name="user-pass"]+span::after{
+        content: "Password must be a at least 8 characters";
+        }
+}
+
+
 
 @include m.desktop-view;
