--- a/intro-component-with-signup-form/css/main.css
+++ b/intro-component-with-signup-form/css/main.css
@@ -86,7 +86,7 @@ header .hero-para {
 }
 
 form * {
-  margin: 8px 0;
+  margin: 10px 0;
 }
 form input {
   height: 2.8rem;
@@ -126,81 +126,81 @@ form .submit-btn:hover, form .submit-btn:focus {
   background-color: #61d6a3;
 }
 
-input:invalid:not(:focus):not(:-moz-placeholder-shown) {
+input:invalid:not(:-moz-placeholder-shown) {
   border: 1px solid #ff4747;
   color: #ff4747;
 }
 
-input:invalid:not(:focus):not(:-ms-input-placeholder) {
+input:invalid:not(:-ms-input-placeholder) {
   border: 1px solid #ff4747;
   color: #ff4747;
 }
 
-input:invalid:not(:focus):not(:placeholder-shown) {
+input:invalid:not(:placeholder-shown) {
   border: 1px solid #ff4747;
   color: #ff4747;
 }
-input:invalid:not(:focus):not(:-moz-placeholder-shown) + span {
+input:invalid:not(:-moz-placeholder-shown) + span {
   display: block;
 }
-input:invalid:not(:focus):not(:-ms-input-placeholder) + span {
+input:invalid:not(:-ms-input-placeholder) + span {
   display: block;
 }
-input:invalid:not(:focus):not(:placeholder-shown) + span {
+input:invalid:not(:placeholder-shown) + span {
   display: block;
 }
-input:invalid:not(:focus):not(:-moz-placeholder-shown) + span::before {
+input:invalid:not(:-moz-placeholder-shown) + span::before {
   position: absolute;
-  top: -37px;
+  top: -40px;
   right: 5px;
   content: url(../assets/icon-error.svg);
 }
-input:invalid:not(:focus):not(:-ms-input-placeholder) + span::before {
+input:invalid:not(:-ms-input-placeholder) + span::before {
   position: absolute;
-  top: -37px;
+  top: -40px;
   right: 5px;
   content: url(../assets/icon-error.svg);
 }
-input:invalid:not(:focus):not(:placeholder-shown) + span::before {
+input:invalid:not(:placeholder-shown) + span::before {
   position: absolute;
-  top: -37px;
+  top: -40px;
   right: 5px;
   content: url(../assets/icon-error.svg);
 }
-input:invalid:not(:focus):not(:-moz-placeholder-shown)[name=user-firstname] + span::after {
+input:invalid:not(:-moz-placeholder-shown)[name=user-firstname] + span::after {
   content: "First Name cannot be empty";
 }
-input:invalid:not(:focus):not(:-ms-input-placeholder)[name=user-firstname] + span::after {
+input:invalid:not(:-ms-input-placeholder)[name=user-firstname] + span::after {
   content: "First Name cannot be empty";
 }
-input:invalid:not(:focus):not(:placeholder-shown)[name=user-firstname] + span::after {
+input:invalid:not(:placeholder-shown)[name=user-firstname] + span::after {
   content: "First Name cannot be empty";
 }
-input:invalid:not(:focus):not(:-moz-placeholder-shown)[name=user-lastname] + span::after {
+input:invalid:not(:-moz-placeholder-shown)[name=user-lastname] + span::after {
   content: "Last Name cannot be empty";
 }
-input:invalid:not(:focus):not(:-ms-input-placeholder)[name=user-lastname] + span::after {
+input:invalid:not(:-ms-input-placeholder)[name=user-lastname] + span::after {
   content: "Last Name cannot be empty";
 }
-input:invalid:not(:focus):not(:placeholder-shown)[name=user-lastname] + span::after {
+input:invalid:not(:placeholder-shown)[name=user-lastname] + span::after {
   content: "Last Name cannot be empty";
 }
-input:invalid:not(:focus):not(:-moz-placeholder-shown)[name=user-email] + span::after {
-  content: "Must be a valid email. e.g.: example@mail.com";
+input:invalid:not(:-moz-placeholder-shown)[name=user-email] + span::after {
+  content: "Must be a valid email, e.g.: example@mail.com";
 }
-input:invalid:not(:focus):not(:-ms-input-placeholder)[name=user-email] + span::after {
-  content: "Must be a valid email. e.g.: example@mail.com";
+input:invalid:not(:-ms-input-placeholder)[name=user-email] + span::after {
+  content: "Must be a valid email, e.g.: example@mail.com";
 }
-input:invalid:not(:focus):not(:placeholder-shown)[name=user-email] + span::after {
-  content: "Must be a valid email. e.g.: example@mail.com";
+input:invalid:not(:placeholder-shown)[name=user-email] + span::after {
+  content: "Must be a valid email, e.g.: example@mail.com";
 }
-input:invalid:not(:focus):not(:-moz-placeholder-shown)[name=user-pass] + span::after {
+input:invalid:not(:-moz-placeholder-shown)[name=user-pass] + span::after {
   content: "Password must be a at least 8 characters";
 }
-input:invalid:not(:focus):not(:-ms-input-placeholder)[name=user-pass] + span::after {
+input:invalid:not(:-ms-input-placeholder)[name=user-pass] + span::after {
   content: "Password must be a at least 8 characters";
 }
-input:invalid:not(:focus):not(:placeholder-shown)[name=user-pass] + span::after {
+input:invalid:not(:placeholder-shown)[name=user-pass] + span::after {
   content: "Password must be a at least 8 characters";
 }
 
